--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
   <head>
     <h1>Big Ass Title </h1>
   </head>
-
   <p>
     This is a paragraph showing I can have
   </p>
-
 <h2>
   List of Things I like
 </h2>
   <ul>
-    <li>Butts </li>
+    <li>Ass</li>
     <li>Coding</li>
-    <li>Stuff </li>
+    <li>Stuff</li>
   </ul>
 </html>
