--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
   <head>
     <h1>Big Ass Title </h1>
   </head>
+  <script>
+    var a = 1;
+    var b = 2;
+    var c = a + b;
+  </script>
   <p>
     This is a paragraph showing I can have
   </p>
 <h2>
-  List of Things I like
+  List of Things I like:
 </h2>
   <ul>
     <li>Ass</li>
