--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
-  <head>
-    <h1>Big Ass Title </h1>
-  </head>
-  <p>
-    This is a paragraph showing I can have
-  </p>
-<h2>
-  List of Things I like
-</h2>
-  <ul>
-    <li>Ass</li>
-    <li>Coding</li>
-    <li>Stuff</li>
-  </ul>
+
+<head>
+    <!-- Import Pretty Google Font -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Import CSS -->
+    <link type="text/css" rel="stylesheet" href="css/second.css">
+</head>
+
+<body>
+  <div class="container card">
+    <img src="img/img_avatar_bald.png" alt="bald_avatar" style="width:100%">
+    <div class="container">
+      <h3 class="material-icons">Howie</h3>
+      <p>Funemployed</p>
+    </div>
+  </div>
+
+</body>
+
 </html>
